--- a/Kurs/Kurs/Kurs.csproj
+++ b/Kurs/Kurs/Kurs.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A2AABC6E-216C-4EC4-9357-B03F6B3DD6F9}</ProjectGuid>
+    <ProjectGuid>{18F9645B-78AB-4900-9B7A-6994E4186F72}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>addressbook_web_tests</RootNamespace>
-    <AssemblyName>addressbook-web-tests</AssemblyName>
+    <RootNamespace>Kurs</RootNamespace>
+    <AssemblyName>Kurs</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -58,35 +58,15 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
-          <Private>False</Private>
-        </Reference>
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="ContactCreationTests.cs" />
-    <Compile Include="ContactHelper.cs" />
-    <Compile Include="ContactRemoval.cs" />
-    <Compile Include="Model\AccountData.cs" />
-    <Compile Include="AppManager\ApplicationManager.cs" />
-    <Compile Include="Circle.cs" />
-    <Compile Include="ContactData.cs" />
-    <Compile Include="Figure.cs" />
-    <Compile Include="Model\GroupData.cs" />
-    <Compile Include="AppManager\GroupHelper.cs" />
-    <Compile Include="Tests\GroupRemovalTests.cs" />
-    <Compile Include="AppManager\LoginHelper.cs" />
-    <Compile Include="AppManager\NavigationHelper.cs" />
-    <Compile Include="Square.cs" />
-    <Compile Include="Tests\TestBase.cs" />
-    <Compile Include="AppManager\HelperBase.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\GroupCreationTests.cs" />
-    <Compile Include="ContactCreationTests11.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram5.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
