Задание №7: Сделать все тесты создания, удаления, модификации для групп и контактов

--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -65,9 +65,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Tests\ContactModificationTests.cs" />
+    <Compile Include="Tests\GroupModificationTests.cs" />
     <Compile Include="Tests\ContactCreationTests.cs" />
     <Compile Include="AppManager\ContactHelper.cs" />
-    <Compile Include="Tests\ContactRemoval.cs" />
+    <Compile Include="Tests\ContactRemovaTestsl.cs" />
     <Compile Include="Model\AccountData.cs" />
     <Compile Include="AppManager\ApplicationManager.cs" />
     <Compile Include="Model\ContactData.cs" />
