--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -65,8 +65,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AuthTestBase.cs" />
-    <Compile Include="LoginTests.cs" />
+    <Compile Include="Tests\AuthTestBase.cs" />
+    <Compile Include="Tests\LoginTests.cs" />
     <Compile Include="Tests\ContactModificationTests.cs" />
     <Compile Include="Tests\GroupModificationTests.cs" />
     <Compile Include="Tests\ContactCreationTests.cs" />
