Попытка генерации контактов в разных форматах

--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -95,7 +95,11 @@
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AppManager\contacts.csv" />
     <None Include="ClassDiagram5.cd" />
+    <None Include="contacts.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="groups.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
