--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -79,7 +79,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AddingContactToGrouptests.cs" />
     <Compile Include="AddressBookDB.cs" />
+    <Compile Include="GroupContactRelation.cs" />
     <Compile Include="GroupTestBase.cs" />
     <Compile Include="Tests\ContactInformationTests.cs" />
     <Compile Include="SearchTests.cs" />
