--- a/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
+++ b/addressbook-web-tests/addressbook-web-tests/addressbook-web-tests.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="AddingContactToGrouptests.cs" />
     <Compile Include="AddressBookDB.cs" />
+    <Compile Include="ContactTestBase.cs" />
     <Compile Include="GroupContactRelation.cs" />
     <Compile Include="GroupTestBase.cs" />
     <Compile Include="Tests\ContactInformationTests.cs" />
